hard-gists/4654813/run.log
=== Docker Run Log for 4654813 ===
Started at: Mi 29. Okt 14:57:06 CET 2025

[2025-10-29 14:57:07] START: Running container for 4654813
[2025-10-29 14:57:07] SUCCESS: Container 3d85e916c4a2704186655d3b23cad5ff3c52ad7c24d52fae419f7b4cdb2b03b9 started for 4654813
=== Container logs for 4654813 ===
  File "/snippet.py", line 12
    print type
    ^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4654813 ===
[2025-10-29 14:57:09] INFO: Container 3d85e916c4a2704186655d3b23cad5ff3c52ad7c24d52fae419f7b4cdb2b03b9 has stopped
